--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
   flutter_datetime_picker: 1.2.5
   shared_preferences: ^0.5.7
   permission_handler: ^3.0.0
+  firebase_auth: ^0.16.0
+  google_sign_in: ^4.4.4
+  flutter_facebook_login: ^3.0.0
+  flutter_twitter: ^1.1.3
+  cloud_firestore: ^0.13.5
+
 
 dev_dependencies:
   flutter_test:
