--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   flutter_twitter: ^1.1.3
   cloud_firestore: ^0.13.5
-
+  image_picker: ^0.6.5+3
 
 dev_dependencies:
   flutter_test:
