--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   firebase_storage: ^3.1.5
   image_picker: ^0.6.5+3
   pinput: ^0.2.0
+  firebase_messaging: ^6.0.13
+  firebase_database: ^3.1.5
+  flutter_staggered_grid_view: ^0.3.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
