--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   firebase_messaging: ^6.0.13
   firebase_database: ^3.1.5
   flutter_staggered_grid_view: ^0.3.0
+  google_maps_flutter: ^0.5.27+1
+  geolocator: ^5.3.1
+  webview_flutter: ^0.3.21
+  firebase_crashlytics: ^0.1.3+3
 
 
 dev_dependencies:
