--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   http: any
-  dio: 2.0.22
+  dio: ^3.0.9
   flutter_launcher_icons: ^0.7.3
   sqflite: any
   path_provider: ^0.4.0
@@ -30,7 +30,7 @@ dependencies:
   simple_animations: ^1.3.3
   avatar_glow: any
   flutter_rating_bar: ^1.1.0
-  flutter_datetime_picker: 1.2.5
+  flutter_datetime_picker: ^1.3.8
   shared_preferences: ^0.5.7
   permission_handler: ^3.0.0
   firebase_auth: ^0.16.0
@@ -48,6 +48,10 @@ dependencies:
   geolocator: ^5.3.1
   webview_flutter: ^0.3.21
   firebase_crashlytics: ^0.1.3+3
+  barcode_scan: ^3.0.1
+#  flutter_barcode_scanner: ^1.0.1
+  video_player: ^0.10.11
+  flutter_local_notifications: ^1.4.3
 
 
 dev_dependencies:
