--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,9 @@ dependencies:
   video_player: ^0.10.11
   flutter_local_notifications: ^1.4.3
   contacts_service: ^0.4.6
-
+  sms: ^0.2.0
+  storage_path: ^0.2.0
+  photo_view: ^0.9.2
 
 dev_dependencies:
   flutter_test:
