--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   sms: ^0.2.0
   storage_path: ^0.2.0
   photo_view: ^0.9.2
+  open_file: ^3.0.1
+
 
 dev_dependencies:
   flutter_test:
