--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,14 +25,14 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  http: any
+  http: ^0.12.1
   dio: ^3.0.9
   flutter_launcher_icons: ^0.7.3
-  sqflite: any
+  sqflite: ^1.3.0+2
   path_provider: ^1.6.8
   flutter_stetho: ^0.5.2
   simple_animations: ^1.3.3
-  avatar_glow: any
+  avatar_glow: ^1.2.0
   flutter_rating_bar: ^1.1.0
   flutter_datetime_picker: ^1.3.8
   shared_preferences: ^0.5.7
