--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,14 +53,14 @@ dependencies:
   webview_flutter: ^0.3.21
   firebase_crashlytics: ^0.1.3+3
   barcode_scan: ^3.0.1
-  video_player: ^0.10.11
+  video_player: ^0.10.11+1
   flutter_local_notifications: ^1.4.3
   contacts_service: ^0.4.6
   sms: ^0.2.0
   storage_path: ^0.2.0
   photo_view: ^0.9.2
   open_file: ^3.0.1
-
+  esys_flutter_share: ^1.0.2
 
 dev_dependencies:
   flutter_test:
