--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   dio: ^3.0.9
   flutter_launcher_icons: ^0.7.3
   sqflite: ^1.3.0+2
-  path_provider: ^1.6.8
+  path_provider: ^1.6.9
   flutter_stetho: ^0.5.2
   simple_animations: ^1.3.3
   avatar_glow: ^1.2.0
@@ -61,6 +61,9 @@ dependencies:
   photo_view: ^0.9.2
   open_file: ^3.0.1
   esys_flutter_share: ^1.0.2
+  call_log: ^2.0.2
+
+
 
 dev_dependencies:
   flutter_test:
