--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,8 @@ dependencies:
   open_file: ^3.0.1
   esys_flutter_share: ^1.0.2
   call_log: ^2.0.2
-
-
+  audioplayers: ^0.15.1
+  local_auth: ^0.6.2+3
 
 dev_dependencies:
   flutter_test:
