--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   webview_flutter: ^1.0.5
   barcode_scan: ^3.0.1
   video_player: ^0.11.0
-  flutter_local_notifications: ^2.0.0
+#  flutter_local_notifications: ^2.0.0
   contacts_service: ^0.4.6
   sms: ^0.2.4
   storage_path: ^0.2.0
@@ -52,8 +52,13 @@ dependencies:
   fancy_bottom_navigation: ^0.3.2
   titled_navigation_bar: ^4.1.0
   bubble_tab_indicator: ^0.1.4
-  intro_views_flutter: '^2.8.2'
+  intro_views_flutter: ^2.8.2
+#  convex_bottom_bar: ^2.6.0
   splashscreen: ^1.2.0
+  flutter_slidable: ^0.5.7
+  pull_to_refresh: ^1.6.1
+  flutter_search_bar: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
