--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,10 @@ dependencies:
   splashscreen: ^1.2.0
   flutter_slidable: ^0.5.7
   pull_to_refresh: ^1.6.1
-  flutter_search_bar: any
+  flutter_search_bar: ^2.1.0
+  wave: ^0.1.0
+  drawerbehavior: ^1.1.4
+
 
 dev_dependencies:
   flutter_test:
