--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,7 +37,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.webaddicted.flutterbeginner"
+        applicationId "com.webaddicted.flutter_tutorial"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
