--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   path_provider: ^1.6.11
   simple_animations: ^2.2.1
   avatar_glow: ^1.2.0
-  flutter_rating_bar: ^3.0.1
+  flutter_rating_bar: ^3.2.0+1
   #  flutter_datetime_picker:
   shared_preferences: ^0.5.12
   permission_handler: ^5.0.1
@@ -58,7 +58,7 @@ dependencies:
   flutter_slidable: ^0.5.7
   pull_to_refresh: ^1.6.1
   flutter_search_bar: ^2.1.0
-  wave: ^0.1.0
+#  wave: ^0.1.0
   drawerbehavior: ^1.1.4
   animated_floatactionbuttons: ^0.1.0
   url_launcher: ^5.5.0
