update web code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,26 +12,26 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
-  http: ^0.13.6
-  cached_network_image: 3.2.3
+  http: ^1.2.1
+  cached_network_image: ^3.3.1
   dio: ^5.2.0
   path_provider: ^2.0.15
   simple_animations: ^5.0.1
-  avatar_glow: ^2.0.2
+  avatar_glow: ^3.0.1
   flutter_rating_bar: ^4.0.1
   #  flutter_datetime_picker:
   shared_preferences: ^2.1.2
-  permission_handler: ^10.3.0
+  permission_handler: ^11.3.0
   flutter_storage_path: ^1.0.4
-  image_picker: ^0.8.8
-  pinput: ^2.2.31
-  flutter_staggered_grid_view: ^0.6.2
+  image_picker: ^1.0.7
+  pinput: ^4.0.0
+  flutter_staggered_grid_view: ^0.7.0
   google_maps_flutter: ^2.3.0
-  geolocator: ^9.0.2
+  geolocator: ^11.0.0
   webview_flutter: ^4.2.2
   barcode_scan2: ^4.2.4
   video_player: ^2.6.1
-  flutter_local_notifications: ^14.1.1
+  flutter_local_notifications: ^17.0.0
   contacts_service: ^0.6.3
   #  sms: ^0.2.4
   #  storage_path: ^0.2.0
@@ -41,14 +41,14 @@ dependencies:
   call_log: ^4.0.0
   #  audioplayers: ^0.17.4
   local_auth: ^2.1.6
-  device_info_plus: ^9.0.2
+  device_info_plus: ^10.0.1
   provider: ^6.0.5
   shimmer: ^3.0.0
   carousel_slider: ^4.2.1
   page_indicator: ^0.4.1
   font_awesome_flutter: ^10.4.0
   #  sliver_fab: ^1.0.0
-  youtube_player_flutter: ^8.1.2
+  youtube_player_flutter: ^9.0.0
   #  youtube_player_iframe: ^4.0.4
   timeline_tile: ^2.0.0
   #  fancy_bottom_navigation: ^0.3.2
@@ -66,7 +66,7 @@ dependencies:
   url_launcher: ^6.1.11
   animator: ^3.3.0
   rect_getter: ^1.1.0
-  logger: ^1.4.0
+  logger: ^2.2.0
   get: ^4.6.5
   responsive_framework: ^1.1.0
 #  for web
@@ -75,7 +75,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter_icons:
   android: true
@@ -98,7 +98,6 @@ flutter:
     - lib/view/details/
     - lib/view/example/
     - lib/view/firebase/
-    - lib/view/github/
     - lib/view/home/
     - lib/view/list/
     - lib/view/local/
